Closed Bug 163869 Opened 24 years ago Closed 13 years ago

unsubscribe alert is showing wrong newsserver if newsserver has been changed

Categories

(MailNews Core :: Networking: NNTP, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 24.0

People

(Reporter: bugzilla, Assigned: sshagarwal)

References

()

Details

(Whiteboard: [good first bug][mentor=mkmelin])

Attachments

(1 file)

if you create a newsserver like news.mozilla.org and subscribe to a newsgroup and then in the account manager, change the newsgroup server from news.mozilla.org to fx forums.macromedia.com and then mozilla is checking for new messages on the news server you get a alert saying: "groups netscape.public.mozilla.dom was not found on news.mozilla.org" while it's actually on forums.macromedia.com 20020821
Product: MailNews → Core
sorry for the spam. making bugzilla reflect reality as I'm not working on these bugs. filter on FOOBARCHEESE to remove these in bulk.
Assignee: sspitzer → nobody
Filter on "Nobody_NScomTLD_20080620"
QA Contact: stephend → networking.news
Product: Core → MailNews Core
Whiteboard: [good first bug]
The dialog needs to be updated to use RealHostName instead of HostName.
OS: Windows 2000 → All
Hardware: x86 → All
Whiteboard: [good first bug] → [good first bug][mentor=mkmelin]
Attached patch Patch — — Splinter Review
Sir, I have tried to make the change and tested it on "news-archive.icm.edu.pl". It seems to work fine.
Assignee: nobody → syshagarwal
Status: NEW → ASSIGNED
Attachment #751429 - Flags: review?(mkmelin+mozilla)
Comment on attachment 751429 [details] [diff] [review] Patch Review of attachment 751429 [details] [diff] [review]: ----------------------------------------------------------------- Looks ok to me. I'm not a reviewer for this code though, so redirecting the review to Joshua.
Attachment #751429 - Flags: review?(mkmelin+mozilla)
Attachment #751429 - Flags: review?(Pidgeot18)
Attachment #751429 - Flags: feedback+
Attachment #751429 - Flags: review?(Pidgeot18) → review+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 24.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: