mailnews/news/src/nsNntpIncomingServer.cpp
@@ -1568,7 +1568,7 @@ nsNntpIncomingServer::GroupNotFound(nsIMsgWindow *aMsgWindow,
   NS_ENSURE_SUCCESS(rv,rv);
 
   nsCString hostname;
-  rv = GetHostName(hostname);
+  rv = GetRealHostName(hostname);
   NS_ENSURE_SUCCESS(rv,rv);
 
   NS_ConvertUTF8toUTF16 hostStr(hostname);
